--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -211,7 +211,7 @@
         <div class="small-print">
         	<div class="container">
         		<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a>
-        		Copyright &copy; IBM.com 2017 </p>
+        		Copyright &copy; www.ibm.com 2017 </p>
         	</div>
         </div>
 	</footer>
